# btviz

./: .gitignore  README.md  SESSION_SUMMARY.md  TODO.md  pyproject.toml  requirements.txt
btviz/: __init__.py  __main__.py  bus.py  config.py
btviz/db/: __init__.py  models.py
btviz/decode/: __init__.py
btviz/extcap/: __init__.py
btviz/tracking/: __init__.py  inventory.py
btviz/ui/: app.py
docs/: HARDWARE.md
docs/active_interrogation/: 00_overview.md  01_initial_plan.md  02_critique.md  03_revised_plan.md  04_classic_bt_integration.md  05_scaffolding.md  v5_to_v6.sql
docs/capture_watchdog/: 00_plan.md
docs/preferences/: 00_design.md
docs/rpa_collapse/: 00_overview.md  01_signals.md  02_class_profiles.md  03_aggregator.md  04_schema.md  05_critique_v1.md  06_deep_dive_2026_04_30.md  07_crc_and_packet_quality.md
src/btviz/: __main__.py  capture_log.py  device_classes.py  single_instance.py  vendors.py
src/btviz/capture/: __init__.py  capability.py  coordinator.py  packet.py  (+4 more)
tests/: test_capture_log_levels.py  test_capture_log_program_start.py  test_firmware_query.py  test_single_instance.py
tests/capture/: test_capability_and_roles.py  test_live_ingest_interrogator_dedup.py  test_watchdog.py
tests/cluster/: test_apple_continuity.py  test_co_lifespan_match.py  test_continuity_protocol.py  test_continuity_seq_carryover.py  test_db_signals.py  test_decisive_signals.py  test_framework.py  test_rotation_cohort_db.py  test_rssi_signature.py  test_runner_log.py
tests/db/: test_interrogations_repo.py  test_migration.py
tests/decode/: test_crc_fail_passthrough.py
tests/fixtures/: example_keys.json
tests/ingest/: test_ad_history.py
tests/interrogator/: test_process_skeleton.py
tests/log_drain/: test_drainer.py  test_rotation.py  test_tailer.py
tests/preferences/: test_cluster_log_level_pref.py  test_cluster_verbose_log_pref.py  test_coded_phy_render.py  test_loader.py  test_log_level_live_apply.py
tests/probe/: test_storage_helpers.py
tests/ui/: test_channel_colors.py  test_cluster_badge_position_and_tooltip.py  test_no_dongles_dialog.py  test_recent_signal_quality.py  test_rename_propagation.py  test_session_timer.py  test_stale_cutoff_and_class_propagation.py  test_stale_cutoff_session_scope.py  test_stall_badge_session_gate.py  test_tooltip_uuids_and_truncate.py  test_user_device_class.py
(+67 files in other folders)
