[project]
name = "btviz"
version = "0.0.1"
description = "Bluetooth traffic visualizer and troubleshooting tool"
# Upper bound is defensive: PySide6 6.11 (and earlier) crashes on Python 3.14
# during Qt metaobject construction (segfault in PyUnicode_InternFromString
# called from PySide::SignalManager::retrieveMetaObject — repro: any
# QMessageBox / QDialog / canvas window). Lift the cap once a PySide6
# release with confirmed 3.14 compatibility ships (likely 6.12+).
requires-python = ">=3.11,<3.14"
dependencies = [
    "PySide6>=6.7",
]
# Note: tshark (the Wireshark CLI dissector) is invoked as a subprocess and
# is *not* a Python package dependency. It must be installed separately —
# see README.md "System requirements".

[project.scripts]
btviz = "btviz.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["btviz*"]

[tool.setuptools.package-data]
btviz = ["db/*.sql", "data/*.json", "data/icons/*.svg"]
