[project]
name = "btviz"
version = "0.0.1"
description = "Bluetooth traffic visualizer and troubleshooting tool"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]
# Note: tshark (the Wireshark CLI dissector) is invoked as a subprocess and
# is *not* a Python package dependency. It must be installed separately —
# see README.md "System requirements".

[project.scripts]
btviz = "btviz.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["btviz*"]

[tool.setuptools.package-data]
btviz = [
    "db/*.sql",
    "data/*.json",
    "data/icons/*.svg",
    "cluster/profiles/*.toml",
]
